--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@500&family=Work+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;600&family=Work+Sans&display=swap");
 @import "_mixins";
 @import "_mobile";
 
@@ -11,13 +11,3 @@
 //fonts
 //serif h1-h6,titles, important text => Ibarra Real Nova
 //sans serif texts, nonimp sentences => Work Sans
-
-body {
-  // display: flex;
-  // flex-direction: column;
-  // font-family: "Ibarra Real Nova", serif;
-}
-
-p {
-  // font-family: "Work Sans", sans-serif;
-}
