--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -231,18 +231,41 @@ body.gothicQuiz {
       background-color: #d8ac69;
     }
   }
-  footer {
-    @include display-format(flex, $flex-position: sp-ard, $flex-dir: row);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    align-items: center;
-    width: 100%;
-    height: 2rem;
-    background-color: #ca8f34;
-    & * {
-      text-decoration: none;
-      color: rgb(76, 55, 55);
+  .saveDataForm {
+    // &.nvisible {
+    //   display: none;
+    // }
+    @include display-format(flex, sp-ard);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    height: 40vh;
+    // margin: 0 auto;
+    background-color: #9e6612;
+    p {
+      // flex-grow: 1;
+      width: 70%;
+      margin: 0 auto;
+      padding: 0.5rem;
+      text-align: center;
+      color: #fff;
+      font-family: "Ibarra Real Nova", serif;
+      text-transform: uppercase;
+      font-weight: 600;
+      background-color: rgba(44, 24, 2, 0.753);
+    }
+    .iptName {
+      width: 60%;
+      margin: 0 auto;
+
+      outline: none;
+    }
+    .saveData {
+      // flex-grow: 1;
+      width: 30%;
+      margin: 0 auto;
     }
   }
 }
